welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	var y:Int = 0
	baisseBrosse()
	while (!positionfinale) { mur() }

	def mur() = { 
		while (!estFaceMur()) {avance() }
		while (estFaceMur()) {
			if (getDirection() == Direction.EST) { gauche(); avance(); gauche() }
			else if (getDirection() == Direction.OUEST) { droite(); avance(); droite() }
		}	
		}
	def positionfinale():Boolean = { 
		if (estFaceMur && getDirection == Direction.EST) { gauche();
			if (estFaceMur) { y=1 }
			else { }
			droite()}
			else { false }
	}
}